fixed wrong padding for nextandprevious.css
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@1983 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/nextandprevious.css
+++ b/content/resources/css/nextandprevious.css
@@ -3,7 +3,7 @@
 img.disabledFirst ,
 img.disabledPrev ,
 img.disabledNext ,
-img.disabledLast {display:none;}
+img.disabledLast {visibility:hidden !important;}
 
 }
 
